<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Budger</string>
    <string name="action_settings">Settings</string>
    <string name="blank_string"></string>

    <!-- Menu items -->
    <string name="logout">Logout</string>
    <string name="menu_daily_activity">Daily Activity</string>
    <string name="menu_month_ledger">Month Ledger</string>
    <string name="menu_year_ledger">Year Ledger</string>

    <!-- activity_login -->
    <string name="button_login">Login</string>

    <!-- Activties -->
    <string name="daily_activity_label">Budger Daily</string>

    <!-- activity_submit_budget -->
    <string name="total_budget_amount">Budget Amount:</string>
    <string name="submit_budget">Submit Budget</string>
    <string name="title_activity_daily">DailyActivity</string>

    <!-- activity_daily -->
    <string name="daily_budget_amount">Daily Budget:</string>
    <string name="daily_budget_amount_value_placeholder">$0</string>
    <string name="spendable">Spendable:</string>
    <string name="spendable_value_placeholder">$0</string>
    <string name="date_placeholder">date placeholder</string>
    <string name="submit_expense_button">Add New Expense</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_dispatch">DispatchActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_daily_ledger">DailyLedgerActivity</string>
    <string name="title_activity_monthly_ledger">MonthlyLedgerActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
