<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/activity"
        android:title="@string/menu_daily_activity"
        android:orderInCategory="0"
        app:showAsAction="never" />

    <item
        android:id="@+id/daily"
        android:title="@string/menu_month_ledger"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/monthly"
        android:title="@string/menu_year_ledger"
        android:orderInCategory="200"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings"
        android:title="@string/action_settings"
        android:orderInCategory="300"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_logout"
        android:title="@string/logout"
        android:orderInCategory="400"
        app:showAsAction="never" />
</menu>
